--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
   "name": "augurv2",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "codegen": "graph codegen",
     "build": "graph build",
-    "deploy": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ protofire/augur-v2",
-    "deploy-dev": "graph deploy --node https://api.thegraph.com/deploy/ --ipfs https://api.thegraph.com/ipfs/ protofire/augur-v2",
-    "create-local": "graph create --node http://localhost:8020/ protofire/augur-v2",
-    "remove-local": "graph remove --node http://localhost:8020/ protofire/augur-v2",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 protofire/augur-v2"
+    "prepare:mainnet": "mustache config/mainnet.json subgraph.template.yaml > subgraph.yaml",
+    "prepare:staging": "mustache config/staging.json subgraph.template.yaml > subgraph.yaml",
+    "deploy:mainnet": "yarn prepare:mainnet && graph deploy --node https://api.thegraph.com/deploy/ --access-token $GRAPH_TOKEN --ipfs https://api.thegraph.com/ipfs/ augurproject/augur-v2",
+    "deploy:staging": "yarn prepare:staging && graph deploy --node https://api.thegraph.com/deploy/ --access-token $GRAPH_TOKEN --ipfs https://api.thegraph.com/ipfs/ augurproject/augur-v2-staging",
+    "create-local": "graph create --node http://localhost:8020/ augurproject/augur-v2",
+    "remove-local": "graph remove --node http://localhost:8020/ augurproject/augur-v2",
+    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 augurproject/augur-v2"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "0.18.0",
-    "@graphprotocol/graph-ts": "0.18.0"
+    "@graphprotocol/graph-ts": "0.18.0",
+    "mustache": "4.0.1"
   }
 }
